wip: runner commands, minor refactors
